--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,6 @@ SQLAlchemy==1.1.11
 Werkzeug==0.11.15
 gunicorn==19.7.1
 flasgger==0.8.0
+git+git://github.com/Ensembl/ensembl-prodinf-core#egg=ensembl_prodinf
+celery==4.1.0
+requests==2.18.4
