--- a/celery_app_config.py.example
+++ b/celery_app_config.py.example
@@ -1,2 +1,3 @@
-broker_url = 'pyamqp://'
-result_backend = 'rpc://'
+import os
+broker_url = os.environ.get("CELERY_BROKER_URL", 'pyamqp://')
+result_backend = os.environ.get("CELERY_RESULT_BACKEND", 'rpc://')
