--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
+git+git://github.com/Ensembl/ensembl-prodinf-core#egg=ensembl_prodinf
+amqp==2.2.2
 appdirs==1.4.0
+billiard==3.5.0.3
+celery==4.1.0
+certifi==2017.7.27.1
+chardet==3.0.4
 click==6.7
+flasgger==0.8.0
 Flask==0.12
 Flask-Cors==3.0.3
+gunicorn==19.7.1
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.4
+jsonschema==2.6.0
+kombu==4.1.0
 MarkupSafe==0.23
+mistune==0.8.3
 MySQL-python==1.2.5
 nodeenv==1.1.4
 nose==1.3.7
@@ -12,11 +24,11 @@ npm==0.1.1
 optional-django==0.1.0
 packaging==16.8
 pyparsing==2.1.10
+pytz==2017.3
+PyYAML==3.12
+requests==2.18.4
 six==1.10.0
 SQLAlchemy==1.1.11
+urllib3==1.22
+vine==1.1.4
 Werkzeug==0.11.15
-gunicorn==19.7.1
-flasgger==0.8.0
-git+git://github.com/Ensembl/ensembl-prodinf-core#egg=ensembl_prodinf
-celery==4.1.0
-requests==2.18.4
