--- a/celery_app_config.py.example
+++ b/celery_app_config.py.example
@@ -1,3 +1,4 @@
 import os
 broker_url = os.environ.get("CELERY_BROKER_URL", 'pyamqp://')
 result_backend = os.environ.get("CELERY_RESULT_BACKEND", 'rpc://')
+task_routes = {'ensembl_prodinf.tasks': {'queue': 'email'}}
