--- a/celery_app_config.py.example
+++ b/celery_app_config.py.example
@@ -1,4 +1,7 @@
 import os
+import getpass
 broker_url = os.environ.get("CELERY_BROKER_URL", 'pyamqp://')
 result_backend = os.environ.get("CELERY_RESULT_BACKEND", 'rpc://')
+smtp_server = os.environ.get("SMTP_SERVER", 'localhost')
+from_email_address = os.environ.get("FROM_EMAIL_ADDRESS", "%s@ebi.ac.uk" % getpass.getuser())
 task_routes = {'ensembl_prodinf.tasks': {'queue': 'email'}}
