added eclipse artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -97,12 +97,10 @@ ENV/
 # mkdocs documentation
 /site
 
+# eclipse project
+.project
+.pydevproject
+
 # mypy
 .mypy_cache/
-instance
-
-/node_modules
-/dist
-/.tmp
-/.sass-cache
-/bower_components
+/handover_config.py
