--- a/handover_config.py.example
+++ b/handover_config.py.example
@@ -19,3 +19,5 @@ variation_handover_group = os.environ.get("VARIATION_HANDOVER_GROUP", "Variation
 funcgen_handover_group = os.environ.get("FUNCGEN_HANDOVER_GROUP", "FuncgenHandover")
 compara_handover_group = os.environ.get("COMPARA_HANDOVER_GROUP", "ComparaHandover")
 smtp_server = os.environ.get("SMTP_SERVER", 'smtp.ebi.ac.uk')
+report_server = os.environ.get("REPORT_SERVER", "amqp://guest:guest@localhost:5672/%2F")
+report_exchange = os.environ.get("REPORT_EXCHANGE", 'report_exchange')
