--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+git://github.com/Ensembl/ensembl-prodinf-core#egg=ensembl_prodinf
+git+git://github.com/Ensembl/ensembl-prodinf-core@experimental/handover#egg=ensembl_prodinf
 amqp==2.2.2
 appdirs==1.4.0
 billiard==3.5.0.3
@@ -33,3 +33,4 @@ urllib3==1.22
 vine==1.1.4
 Werkzeug==0.11.15
 pika==0.11.2
+pika-pool==0.1.3
