--- a/handover_config.py.example
+++ b/handover_config.py.example
@@ -5,11 +5,11 @@ Created on 11 Dec 2017
 '''
 import os
 hc_uri = os.environ.get("HC_URI", "http://127.0.0.1:5001/")
-hc_web_uri = os.environ.get("HC_WEB_URI", "http://127.0.0.1:9000/#!/view/")
+hc_web_uri = os.environ.get("HC_WEB_URI", "http://127.0.0.1:9000/#!/hc_result/")
 copy_uri = os.environ.get("COPY_URI", "http://127.0.0.1:5002/")
-copy_web_uri = os.environ.get("COPY_WEB_URI", "http://127.0.0.1:9000/#!/copyview/")
+copy_web_uri = os.environ.get("COPY_WEB_URI", "http://127.0.0.1:9000/#!/copy_result/")
 meta_uri = os.environ.get("META_URI", "http://127.0.0.1:5003/")
-meta_web_uri = os.environ.get("META_WEB_URI", "http://127.0.0.1:9000/#!/copyview/")
+meta_web_uri = os.environ.get("META_WEB_URI", "http://127.0.0.1:9000/#!/metadata_result/")
 staging_uri = os.environ.get("STAGING_URI", "mysql://user@staging:3306/")
 live_uri = os.environ.get("LIVE_URI", "mysql://user@127.0.0.1:3306/")
 production_uri = os.environ.get("PRODUCTION_URI", "mysql://user@127.0.0.1:3306/ensembl_production")
