--- a/handover_config.py.example
+++ b/handover_config.py.example
@@ -10,6 +10,7 @@ copy_uri = os.environ.get("COPY_URI", "http://127.0.0.1:5002/")
 copy_web_uri = os.environ.get("COPY_WEB_URI", "http://127.0.0.1:9000/#!/copy_result/")
 meta_uri = os.environ.get("META_URI", "http://127.0.0.1:5003/")
 meta_web_uri = os.environ.get("META_WEB_URI", "http://127.0.0.1:9000/#!/metadata_result/")
+event_uri = os.environ.get("EVENT_URI", 'http://127.0.0.1:5004/')
 staging_uri = os.environ.get("STAGING_URI", "mysql://user@staging:3306/")
 live_uri = os.environ.get("LIVE_URI", "mysql://user@127.0.0.1:3306/")
 production_uri = os.environ.get("PRODUCTION_URI", "mysql://user@127.0.0.1:3306/ensembl_production")
