Added support for multiple compara master databases, vertebrate and non vertebrate compara as well as pan homology compara. Fixed a typo in metadata failure email. Updated handover config example

--- a/handover_config.py.example
+++ b/handover_config.py.example
@@ -14,11 +14,13 @@ event_uri = os.environ.get("EVENT_URI", 'http://127.0.0.1:5004/')
 staging_uri = os.environ.get("STAGING_URI", "mysql://user@staging:3306/")
 live_uri = os.environ.get("LIVE_URI", "mysql://user@127.0.0.1:3306/")
 production_uri = os.environ.get("PRODUCTION_URI", "mysql://user@127.0.0.1:3306/ensembl_production")
-compara_uri = os.environ.get("COMPARA_URI", "mysql://user@127.0.0.1:3306/ensembl_compara_master")
-core_handover_group = os.environ.get("CORE_HANDOVER_GROUP", "CoreHandover")
-variation_handover_group = os.environ.get("VARIATION_HANDOVER_GROUP", "VariationHandover")
-funcgen_handover_group = os.environ.get("FUNCGEN_HANDOVER_GROUP", "FuncgenHandover")
-compara_handover_group = os.environ.get("COMPARA_HANDOVER_GROUP", "ComparaHandover")
+compara_uri = os.environ.get("COMPARA_URI", "mysql://user@127.0.0.1:3306/")
+compara_uri2 = os.environ.get("COMPARA_URI2", "mysql://user@127.0.0.1:3306/")
+core_handover_group = os.environ.get("CORE_HANDOVER_GROUP", "GenebuildPostHandover")
+variation_handover_group = os.environ.get("VARIATION_HANDOVER_GROUP", "VariationRelease")
+funcgen_handover_group = os.environ.get("FUNCGEN_HANDOVER_GROUP", "FuncgenIntegrity")
+compara_handover_group = os.environ.get("COMPARA_HANDOVER_GROUP", "ComparaIntegrity")
+compara_pan_handover_group = os.environ.get("COMPARA_PAN_HANDOVER_GROUP", "ComparaPanIntegrity")
 smtp_server = os.environ.get("SMTP_SERVER", 'smtp.ebi.ac.uk')
 report_server = os.environ.get("REPORT_SERVER", "amqp://guest:guest@localhost:5672/%2F")
 report_exchange = os.environ.get("REPORT_EXCHANGE", 'report_exchange')
