Using new groups that can only pass or fail but not be in between

--- a/handover_config.py.example
+++ b/handover_config.py.example
@@ -19,8 +19,8 @@ production_uri = os.environ.get("PRODUCTION_URI", "mysql://user@127.0.0.1:3306/e
 production_eg_uri = os.environ.get("PRODUCTION_URI", "mysql://user@127.0.0.1:3306/ensembl_production")
 compara_uri = os.environ.get("COMPARA_URI", "mysql://user@127.0.0.1:3306/")
 compara_eg_uri = os.environ.get("COMPARA_EG_URI", "mysql://user@127.0.0.1:3306/")
-core_handover_group = os.environ.get("CORE_HANDOVER_GROUP", "GenebuildPostHandover")
-core_eg_handover_group = os.environ.get("CORE_EG_HANDOVER_GROUP", "EGCoreHandover")
+core_handover_group = os.environ.get("CORE_HANDOVER_GROUP", "GenebuildPostHandoverService")
+core_eg_handover_group = os.environ.get("CORE_EG_HANDOVER_GROUP", "EGCoreHandoverService")
 variation_handover_group = os.environ.get("VARIATION_HANDOVER_GROUP", "VariationRelease")
 funcgen_handover_group = os.environ.get("FUNCGEN_HANDOVER_GROUP", "FuncgenIntegrity")
 compara_handover_group = os.environ.get("COMPARA_HANDOVER_GROUP", "ComparaIntegrity")
