--- a/handover_config.py.example
+++ b/handover_config.py.example
@@ -12,6 +12,7 @@ meta_uri = os.environ.get("META_URI", "http://127.0.0.1:5003/")
 meta_web_uri = os.environ.get("META_WEB_URI", "http://127.0.0.1:9000/#!/metadata_result/")
 event_uri = os.environ.get("EVENT_URI", 'http://127.0.0.1:5004/')
 staging_uri = os.environ.get("STAGING_URI", "mysql://user@staging:3306/")
+secondary_staging_uri = os.environ.get("SECONDARY_STAGING_URI", "mysql://user@staging2:3306/")
 live_uri = os.environ.get("LIVE_URI", "mysql://user@127.0.0.1:3306/")
 production_uri = os.environ.get("PRODUCTION_URI", "mysql://user@127.0.0.1:3306/ensembl_production")
 compara_uri = os.environ.get("COMPARA_URI", "mysql://user@127.0.0.1:3306/")
@@ -24,4 +25,4 @@ smtp_server = os.environ.get("SMTP_SERVER", 'smtp.ebi.ac.uk')
 report_server = os.environ.get("REPORT_SERVER", "amqp://guest:guest@localhost:5672/%2F")
 report_exchange = os.environ.get("REPORT_EXCHANGE", 'report_exchange')
 data_files_path = os.environ.get("DATA_FILE_PATH" , '/data_files/')
-allowed_database_types = os.environ.get("ALLOWED_DATABASE_TYPES" , 'core,core_like,variation,regulation,compara')
+allowed_database_types = os.environ.get("ALLOWED_DATABASE_TYPES" , 'core,core_like,variation,funcgen,compara')
