Added support for ensembl ancestral database

--- a/handover_config.py.example
+++ b/handover_config.py.example
@@ -20,9 +20,10 @@ core_handover_group = os.environ.get("CORE_HANDOVER_GROUP", "GenebuildPostHandov
 variation_handover_group = os.environ.get("VARIATION_HANDOVER_GROUP", "VariationRelease")
 funcgen_handover_group = os.environ.get("FUNCGEN_HANDOVER_GROUP", "FuncgenIntegrity")
 compara_handover_group = os.environ.get("COMPARA_HANDOVER_GROUP", "ComparaIntegrity")
+ancestral_handover_group = os.environ.get("ANCESTRAL_HANDOVER_GROUP", "ComparaAncestral")
 compara_pan_handover_group = os.environ.get("COMPARA_PAN_HANDOVER_GROUP", "ComparaPanIntegrity")
 smtp_server = os.environ.get("SMTP_SERVER", 'smtp.ebi.ac.uk')
 report_server = os.environ.get("REPORT_SERVER", "amqp://guest:guest@localhost:5672/%2F")
 report_exchange = os.environ.get("REPORT_EXCHANGE", 'report_exchange')
 data_files_path = os.environ.get("DATA_FILE_PATH" , '/data_files/')
-allowed_database_types = os.environ.get("ALLOWED_DATABASE_TYPES" , 'core,core_like,variation,funcgen,compara')
+allowed_database_types = os.environ.get("ALLOWED_DATABASE_TYPES" , 'core,core_like,variation,funcgen,compara,ancestral')
