--- a/handover_config.py.example
+++ b/handover_config.py.example
@@ -26,4 +26,4 @@ smtp_server = os.environ.get("SMTP_SERVER", 'smtp.ebi.ac.uk')
 report_server = os.environ.get("REPORT_SERVER", "amqp://guest:guest@localhost:5672/%2F")
 report_exchange = os.environ.get("REPORT_EXCHANGE", 'report_exchange')
 data_files_path = os.environ.get("DATA_FILE_PATH" , '/data_files/')
-allowed_database_types = os.environ.get("ALLOWED_DATABASE_TYPES" , 'core,core_like,variation,funcgen,compara,ancestral')
+allowed_database_types = os.environ.get("ALLOWED_DATABASE_TYPES" , 'core,rnaseq,cdna,otherfeatures,variation,funcgen,compara,ancestral')
