Adding new parameter for Metazoa master compara since it's not on the compara_uri anymore

--- a/handover_config.py.example
+++ b/handover_config.py.example
@@ -17,6 +17,7 @@ live_uri = os.environ.get("LIVE_URI", "mysql://user@127.0.0.1:3306/")
 production_uri = os.environ.get("PRODUCTION_URI", "mysql://user@127.0.0.1:3306/ensembl_production")
 compara_uri = os.environ.get("COMPARA_URI", "mysql://user@127.0.0.1:3306/")
 compara_plants_uri = os.environ.get("COMPARA_PLANTS_URI", "mysql://user@127.0.0.1:3306/")
+compara_metazoa_uri = os.environ.get("COMPARA_METAZOA_URI", "mysql://user@127.0.0.1:3306/")
 core_handover_group = os.environ.get("CORE_HANDOVER_GROUP", "GenebuildPostHandoverService")
 variation_handover_group = os.environ.get("VARIATION_HANDOVER_GROUP", "VariationRelease")
 funcgen_handover_group = os.environ.get("FUNCGEN_HANDOVER_GROUP", "FuncgenIntegrity")
