Integrating the DC into the handover service. In this commit, I have masked out the HC system (submit_hc) so that we can use DC instead. For release 100, I think we need a code to push compara dbs into submit_hc and other dbs into submit_dc

--- a/handover_config.py.example
+++ b/handover_config.py.example
@@ -5,6 +5,7 @@ Created on 11 Dec 2017
 '''
 import os
 hc_uri = os.environ.get("HC_URI", "http://127.0.0.1:5001/")
+dc_uri = os.environ.get("HC_URI", "http://127.0.0.1:5006/")
 hc_web_uri = os.environ.get("HC_WEB_URI", "http://127.0.0.1:9000/#!/hc_result/")
 copy_uri = os.environ.get("COPY_URI", "http://127.0.0.1:5002/")
 copy_web_uri = os.environ.get("COPY_WEB_URI", "http://127.0.0.1:9000/#!/copy_result/")
