--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 nose==1.3.7
-celery==4.1.0
-requests==2.18.4
-SQLAlchemy==1.1.11
-pika==0.10.0
+celery==4.3.0
+requests==2.22.0
+SQLAlchemy==1.3.10
+SQLAlchemy-Utils==0.34.2
+pika==1.1.0
 pika-pool==0.1.3
