--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ flasgger==0.8.0
 Flask==0.12
 Flask-Bootstrap==3.3.7.1
 Flask-Cors==3.0.3
-gunicorn==19.7.1
+gunicorn==20.0.0
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.4
@@ -18,6 +18,7 @@ jsonschema==2.6.0
 kombu==4.6.5
 MarkupSafe==0.23
 mistune==0.8.3
+mysqlclient==1.4.6
 nodeenv==1.1.4
 nose==1.3.7
 npm==0.1.1
