--- a/handover_config.py.example
+++ b/handover_config.py.example
@@ -15,10 +15,12 @@ event_uri = os.environ.get("EVENT_URI", 'http://127.0.0.1:5004/')
 staging_uri = os.environ.get("STAGING_URI", "mysql://user@staging:3306/")
 secondary_staging_uri = os.environ.get("SECONDARY_STAGING_URI", "mysql://user@staging2:3306/")
 live_uri = os.environ.get("LIVE_URI", "mysql://user@127.0.0.1:3306/")
+secondary_live_uri = os.environ.get("SECONDARY_LIVE_URI", "mysql://user@127.0.0.1:3306/")
 production_uri = os.environ.get("PRODUCTION_URI", "mysql://user@127.0.0.1:3306/ensembl_production")
 compara_uri = os.environ.get("COMPARA_URI", "mysql://user@127.0.0.1:3306/")
 compara_plants_uri = os.environ.get("COMPARA_PLANTS_URI", "mysql://user@127.0.0.1:3306/")
 compara_metazoa_uri = os.environ.get("COMPARA_METAZOA_URI", "mysql://user@127.0.0.1:3306/")
+compara_grch37_uri = os.environ.get("COMPARA_GRCH37_URI", "mysql://user@127.0.0.1:3306/")
 core_handover_group = os.environ.get("CORE_HANDOVER_GROUP", "GenebuildPostHandoverService")
 variation_handover_group = os.environ.get("VARIATION_HANDOVER_GROUP", "VariationRelease")
 funcgen_handover_group = os.environ.get("FUNCGEN_HANDOVER_GROUP", "FuncgenIntegrity")
