--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ chardet==3.0.4
 click==6.7
 flasgger==0.8.0
 Flask==1.1.1
-Flask-Bootstrap==3.3.7.1
+bootstrap-flask==1.2.0
 Flask-Cors==3.0.3
 gunicorn==20.0.4
 idna==2.6
