--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2017.7.27.1
 chardet==3.0.4
 Click==7.0
 dominate==2.4.0
+elasticsearch>=6.0.0,<7.0.0
 flasgger==0.9.4
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
