Switch to bootstrap-flask, instead of Flask-Bootstrap, so that we can use Bootstrap 4

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ amqp==2.5.1
 appdirs==1.4.0
 attrs==19.3.0
 billiard==3.6.1.0
+bootstrap-flask==1.2.0
 celery==4.3.0
 certifi==2017.7.27.1
 chardet==3.0.4
@@ -11,7 +12,6 @@ dominate==2.4.0
 elasticsearch>=6.0.0,<7.0.0
 flasgger==0.9.4
 Flask==1.1.1
-Flask-Bootstrap==3.3.7.1
 Flask-Cors==3.0.3
 gunicorn==20.0.4
 idna==2.6
