Example file for server config - uri is a hash key, with a sub hash with 1) a readable version of the server name, used in web_display and as the name of the registry that will be used, and 2) a config profile, which determines the config file used.

--- a/server_names.json.example
+++ b/server_names.json.example
@@ -1,3 +1,6 @@
 {
-  "local": "vertebrates"
+  "mysql://ensro@localhost:3306/": {
+    "server_name": "localhost",
+    "config_profile": "local"
+  }
 }
