--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ certifi==2020.4.5.2
 chardet==3.0.4
 Click==7.0
 dominate==2.4.0
-elasticsearch==6.8.1
+elasticsearch>=6.8.1,<7.0.0
 flasgger==0.9.4
 Flask==1.1.1
 Flask-Cors==3.0.3
