--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,7 @@
 include LICENSE
 include NOTICE
 include VERSION
+include src/ensembl/production/datacheck/templates/*
+include src/ensembl/production/datacheck/static/js/*
+include src/ensembl/production/datacheck/static/css/*
+include src/ensembl/production/datacheck/swagger.yml
