datacheck form cleanup

--- a/requirements.in
+++ b/requirements.in
@@ -1,13 +1,16 @@
-git+ssh://git@github.com/Ensembl/ensembl-prodinf-core.git#egg=ensembl-prodinf-core
+git+git://github.com/Ensembl/ensembl-prodinf-core.git#egg=ensembl-prodinf-core
 Bootstrap-Flask
 Click
 elasticsearch>=6.8.1,<7.0.0
+email_validator
 Flask
 flasgger
 Flask-Cors
-mysqlclient
+flask_wtf
 gunicorn
+mysqlclient
+pytest
 requests
 SQLAlchemy
 wtforms
-email_validator
+
