--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 ---
-base_dir: '/app/'
-datacheck_output_dir: '/nfs/nobackup/ensembl/ensprod/datachecks'
-datacheck_common_dir: '/nfs/panda/ensembl/production/datachecks'
-hive_uri: 'mysql://'
-server_names_file: '/app/server_names.json'
-swagger_file: '/app/swagger.yml'
+base_dir: '/home/appuser/'
+datacheck_output_dir: '/nfs'
+datacheck_common_dir: '/nfs'
+hive_uri: 'mysql://test:test@test:3366/ensprod_db_datachecks_production'
+server_names_file: '/home/appuser/server_names.json'
+swagger_file: '/home/appuser/swagger.yml'
