--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,16 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+amqp==5.0.6
+    # via kombu
 attrs==20.3.0
     # via jsonschema
+bootstrap-flask==1.5.1
+    # via -r requirements.in
 certifi==2020.12.5
-    # via requests
+    # via
+    #   ensembl-prodinf-core
+    #   requests
 chardet==4.0.0
     # via requests
 click==7.1.2
@@ -20,7 +26,7 @@ elasticsearch==6.8.1
     # via -r requirements.in
 email-validator==1.1.2
     # via -r requirements.in
-git+ssh://git@github.com/Ensembl/ensembl-prodinf-core.git#egg=ensembl-prodinf-core
+git+git://github.com/Ensembl/ensembl-prodinf-core.git#egg=ensembl-prodinf-core
     # via -r requirements.in
 flasgger==0.9.5
     # via -r requirements.in
@@ -29,8 +35,11 @@ flask-cors==3.0.10
 flask==1.1.2
     # via
     #   -r requirements.in
+    #   bootstrap-flask
     #   flasgger
     #   flask-cors
+greenlet==1.0.0
+    # via sqlalchemy
 gunicorn==20.0.4
     # via -r requirements.in
 idna==2.10
@@ -38,38 +47,58 @@ idna==2.10
     #   email-validator
     #   requests
 importlib-metadata==3.7.0
-    # via jsonschema
+    # via
+    #   jsonschema
+    #   kombu
+    #   sqlalchemy
 itsdangerous==1.1.0
     # via flask
 jinja2==2.11.3
     # via flask
 jsonschema==3.2.0
     # via flasgger
+kombu==5.0.2
+    # via ensembl-prodinf-core
 markupsafe==1.1.1
     # via
     #   jinja2
     #   wtforms
 mistune==0.8.4
     # via flasgger
+mysqlclient==2.0.3
+    # via -r requirements.in
 pyrsistent==0.17.3
     # via jsonschema
 pyyaml==5.4.1
-    # via flasgger
+    # via
+    #   ensembl-prodinf-core
+    #   flasgger
 requests==2.25.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   ensembl-prodinf-core
 six==1.15.0
     # via
+    #   ensembl-prodinf-core
     #   flasgger
     #   flask-cors
     #   jsonschema
-sqlalchemy==1.3.23
-    # via -r requirements.in
+    #   sqlalchemy-utils
+sqlalchemy-utils==0.36.8
+    # via ensembl-prodinf-core
+sqlalchemy==1.4.6
+    # via
+    #   -r requirements.in
+    #   ensembl-prodinf-core
+    #   sqlalchemy-utils
 typing-extensions==3.7.4.3
     # via importlib-metadata
 urllib3==1.26.3
     # via
     #   elasticsearch
     #   requests
+vine==5.0.0
+    # via amqp
 werkzeug==1.0.1
     # via flask
 wtforms==2.3.3
