change  the module installed from git repos in requirements.txt

--- a/requirements.in
+++ b/requirements.in
@@ -1,4 +1,4 @@
-git+git://github.com/Ensembl/ensembl-prodinf-core.git#egg=ensembl-prodinf-core
+ensembl-prodinf-core@git+http://github.com/Ensembl/ensembl-prodinf-core.git#egg=ensembl-prodinf-core
 Bootstrap-Flask
 Click
 elasticsearch>=6.8.1,<7.0.0
@@ -14,4 +14,3 @@ requests
 SQLAlchemy
 sqlalchemy_utils==0.37.0
 wtforms
-
