--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
 
 before_script:
   - pip install -r requirements.txt
+  - pip install -r requirements-no-deps.txt --no-deps
   - pip install coverage
   - pip install .
 
