--- a/src/tests/docker-compose.yml
+++ b/src/tests/docker-compose.yml
@@ -3,12 +3,15 @@ services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.2.4
     container_name: elasticsearch
-    ports:
-      - 9200:9200
-      - 9300:9300
     environment:
+      - http.port=9200
+      - node.name=elasticsearch
+      - bootstrap.memory_lock=true
       - discovery.type=single-node
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ports:
+      - '9200:9200'
+      - '9300:9300'      
     networks:
       - shared_net
 networks:
