--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
   ES_INDEX: "datacheck_results"
   ES_PORT: "9200"
   ES_HOST: "localhost"
+  ES_USER: ""
+  ES_PASSWORD: ""
 
 before_install:
   - sudo rm /usr/local/bin/docker-compose
