--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,7 @@ before_install:
 
 before_script:
   - docker-compose -f src/tests/docker-compose.yml  up -d
-  - pip install -r requirements.txt
-  - pip install coverage
+  - pip install -r requirements-test.txt
   - pip install .
 
 script:
